2011-06-16  Alexander V. Lukyanov <lav@yars.free.net>

	* attach.cc, attach.h: new files.
	* lftp.cc: (attach) new command, pass tty fd to a backgrounded lftp.
	* NetAccess.cc: init reconnect_interval_current properly.
	* complete.cc: re-set SIGINT handler.
	* ftpclass.cc: don't send FEAT after QUIT.

2011-06-10  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h: when cmd:fail-exit is true, save the non-zero
	  exit code for the case of cmd:parallel>1 (patch by Fernando Gutierrez).

2011-06-08  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.h: use ResClient to hook Reconfig (reported by Fernando
          Gutierrez <zerks0@gmail.com>).
	* CmdExec.cc: parse buffered command even without a feeder, when
	  cmd:parallel>1 (patch by Fernando Gutierrez).
	* CmdExec.cc: set exit_code to 0 when a job has been created
	  (patch by Fernando Gutierrez).

2011-05-10  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: (tmp_buf) new method.
	* CmdExec.cc, network.cc, ResMgr.cc: get rid of static buffers.
	* Torrent.cc, Torrent.h: auto set torrent:ipv6; better status.

2011-04-29  Alexander V. Lukyanov <lav@yars.free.net>

        * CmdExec.cc, CmdExec.h, CopyJob.cc, CopyJob.h, DirColors.cc,
	  FileSet.cc, FileSetOutput.cc, FileSetOutput.h, FindJob.cc,
	  FindJob.h, Http.cc, Job.cc, Job.h, MirrorJob.cc, MirrorJob.h,
	  QueueFeeder.cc, QueueFeeder.h, SleepJob.cc, SleepJob.h,
	  StatusLine.cc, Torrent.cc, Torrent.h, TreatFileJob.cc,
	  TreatFileJob.h, commands.cc, complete.cc, ftpclass.cc, mgetJob.cc,
	  mgetJob.h, mkdirJob.cc, mkdirJob.h, mvJob.cc, mvJob.h, pgetJob.cc,
	  pgetJob.h, url.cc, xstring.cc, xstring.h: replace PrintStatus with
	  FormatStatus; allow `jobs' output filtering; get rid of complex
	  alloca tricks.
	* Torrent.cc, Torrent.h: don't show not connected peers by default
	  (jobs -vv still lists them); show validation rate and eta.

2011-04-22  Alexander V. Lukyanov <lav@yars.free.net>
